--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
+    "fast-check": "^1.16.0",
     "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
