--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.136",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "autoprefixer": "^9.6.0",
