--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,12 @@
     "sourceMap": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noImplicitAny": true,
     "module": "es6",
+    "allowJs": true,
     "moduleResolution": "node",
     "target": "es6",
-    "allowJs": true
+    "esModuleInterop": true,
+    "lib": ["es2015", "es2017", "dom"]
   },
   "include": ["./src/**/*"]
 }
