--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Range slider component",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src --fix"
   },
   "keywords": [
     "typescript",
@@ -15,12 +16,11 @@
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/jest": "^24.0.15",
-    "@types/lodash": "^4.14.136",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
     "autoprefixer": "^9.6.0",
     "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "fast-check": "^1.16.0",
     "jest": "^24.8.0",
@@ -32,6 +32,6 @@
   },
   "dependencies": {
     "events": "^3.0.0",
-    "lodash": "^4.17.15"
+    "fp-ts": "^2.0.5"
   }
 }
