--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
   "devDependencies": {
     "@types/events": "^3.0.0",
     "@types/jest": "^24.0.15",
+    "@types/ramda": "^0.26.22",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
     "autoprefixer": "^9.6.0",
     "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.2.0",
-    "eslint-plugin-prettier": "^3.1.0",
     "fast-check": "^1.16.0",
     "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.18.2",
     "sass": "^1.22.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
   },
   "dependencies": {
     "events": "^3.0.0",
-    "fp-ts": "^2.0.5"
+    "purify-ts": "^0.13.1",
+    "ramda": "^0.26.1",
+    "ramda-adjunct": "^2.20.0"
   }
 }
