--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@typescript-eslint/parser": "^2.1.0",
     "autoprefixer": "^9.6.0",
     "eslint": "^6.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "fast-check": "^1.16.0",
     "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3",
+    "prettier": "^1.18.2",
     "sass": "^1.22.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
