--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "events": "^3.0.0",
+    "lit-html": "^1.1.2",
     "purify-ts": "^0.13.1",
     "ramda": "^0.26.1",
     "ramda-adjunct": "^2.20.0"
