--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Roman Korenev",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/dom": "^6.8.1",
     "@types/events": "^3.0.0",
     "@types/jest": "^24.0.15",
     "@types/ramda": "^0.26.22",
