--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "fast-check": "^1.16.0",
     "jest": "^24.8.0",
+    "mutation-observer": "^1.0.3",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.18.2",
     "sass": "^1.22.0",
