--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "target": "es6",
     "esModuleInterop": true,
-    "lib": ["es2015", "es2017", "dom"]
+    "lib": ["es2015", "es2017", "es2019", "dom"]
   },
   "include": ["./src/**/*"]
 }
