--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint src --fix",
+    "lint": "eslint --ext '.ts, .js' --fix ./src",
     "demo": "parcel ./demo/demo.html"
   },
   "keywords": [
@@ -19,30 +19,36 @@
     "> 1%"
   ],
   "devDependencies": {
-    "@testing-library/dom": "^6.8.1",
+    "@testing-library/dom": "^6.10.1",
     "@types/events": "^3.0.0",
-    "@types/jest": "^24.0.15",
-    "@types/ramda": "^0.26.22",
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/parser": "^2.1.0",
-    "autoprefixer": "^9.6.0",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.3.0",
+    "@types/jest": "^24.0.23",
+    "@types/ramda": "^0.26.34",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "autoprefixer": "^9.7.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "fast-check": "^1.16.0",
-    "jest": "^24.8.0",
+    "eslint-plugin-react": "^7.16.0",
+    "fast-check": "^1.18.1",
+    "jest": "^24.9.0",
     "mutation-observer": "^1.0.3",
-    "parcel-bundler": "^1.12.3",
-    "prettier": "^1.18.2",
-    "sass": "^1.22.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.2"
+    "parcel-bundler": "^1.12.4",
+    "prettier": "^1.19.1",
+    "sass": "^1.23.6",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "events": "^3.0.0",
     "lit-html": "^1.1.2",
-    "purify-ts": "^0.13.1",
+    "purify-ts": "^0.13.2",
     "ramda": "^0.26.1",
-    "ramda-adjunct": "^2.20.0"
+    "ramda-adjunct": "^2.22.1"
   }
 }
