--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/dom": "^6.10.1",
     "@types/events": "^3.0.0",
     "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.11",
     "@types/ramda": "^0.26.34",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
