--- a/package.json
+++ b/package.json
@@ -22,39 +22,39 @@
     "> 1%"
   ],
   "devDependencies": {
-    "@testing-library/dom": "^6.10.1",
+    "@testing-library/dom": "^6.11.0",
     "@types/events": "^3.0.0",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.11",
-    "@types/ramda": "^0.26.34",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
-    "autoprefixer": "^9.7.1",
-    "eslint": "^6.6.0",
+    "@types/jest": "^24.0.25",
+    "@types/node": "^12.12.24",
+    "@types/ramda": "^0.26.39",
+    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@typescript-eslint/parser": "^2.14.0",
+    "autoprefixer": "^9.7.3",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-json": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "fast-check": "^1.18.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "fast-check": "^1.21.0",
     "jest": "^24.9.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "pug": "^2.0.4",
     "rimraf": "^3.0.0",
-    "sass": "^1.23.6",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.7.2"
+    "sass": "^1.24.2",
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.7.4"
   },
   "dependencies": {
     "events": "^3.0.0",
     "lit-html": "^1.1.2",
+    "mutation-observer": "^1.0.3",
     "purify-ts": "^0.13.2",
     "ramda": "^0.26.1",
-    "ramda-adjunct": "^2.22.1",
-    "mutation-observer": "^1.0.3"
+    "ramda-adjunct": "^2.23.0"
   }
 }
