--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.24",
     "@types/ramda": "^0.26.39",
+    "@types/sprintf-js": "^1.1.2",
     "@typescript-eslint/eslint-plugin": "^2.14.0",
     "@typescript-eslint/parser": "^2.14.0",
     "autoprefixer": "^9.7.3",
@@ -58,6 +59,7 @@
     "mutation-observer": "^1.0.3",
     "purify-ts": "^0.13.2",
     "ramda": "^0.26.1",
-    "ramda-adjunct": "^2.23.0"
+    "ramda-adjunct": "^2.23.0",
+    "sprintf-js": "^1.1.2"
   }
 }
