--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "events": "^3.0.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
+    "moment": "^2.24.0",
     "mutation-observer": "^1.0.3",
     "purify-ts": "^0.13.2",
     "ramda": "^0.26.1",
