--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/dom": "^6.11.0",
     "@types/events": "^3.0.0",
     "@types/jest": "^24.0.25",
+    "@types/jquery": "^3.3.31",
     "@types/node": "^12.12.24",
     "@types/ramda": "^0.26.39",
     "@types/sprintf-js": "^1.1.2",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "events": "^3.0.0",
+    "jquery": "^3.4.1",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
     "moment": "^2.24.0",
